feat: add model download functionality and related database table structures (#245)
* feat: Add model download functionality and related database table structures

* feat: Add model download functionality and related database table structures

* chore: stop tracking storage config

* feat: Add model download functionality and related database table structures

* feat: Add model download functionality and related database table structures

---------
